feat: Improve `create_regular_gameworld` algorithm
